# mixtape-society

./: .dockerignore  .env  .gitignore  .markdownlint.yaml  404.html  DISCLAIMER  Dockerfile  LICENCE  LICENSE  README.md  about.html  changelog.html  docker-compose.yml  docker.html  editor.html  getting-started.html  index.html  main.py  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  sharing.html  sitemap.xml
.github/workflows/: docker-image.yml  docker-publish.yml  docs.yml
development/: app.html  audio_caching.html  browse_mixtapes.html  common.html  configuration.html  deployment.html  docker-dev.html  docker.html  editor.html  intro.html  mixtape_manager.html  musiclib.html  playback.html  project_modules.html  qr_generation.html  roadmap.html  utilities.html
development/android-auto/: backend-implementation.html  frontend-integration.html  integration-overview.html  testing-guide.html
development/audio-playback/: media-integration.html  overview.html
development/chromecast/: integration.html
development/cover-art/: api.html  overview.html  size-optimization.html
development/media-assets/: opengraph.html
development/mixtape-system/: editor-api.html  editor-frontend.html  manager-backend.html  overview.html  qr-generation.html
development/music-collection/: loading.html  overview.html  reading.html
development/musiclib/: intro.html  loading.html  reading.html
development/player/: playerControls.html  playerUtils.html
development/pwa/: pwa-optimization.html  pwa.html
development/routes/: authentication.html  browse_mixtapes.html  covers.html  editor.html  opengraph_images.html  playback.html  qr_codes.html
development/web-application/: flask-app.html
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/test/: docker-compose.yml
docs/: about.md  changelog.md  collection-management.md  configuration.md  development.md  docker.md  editor.md  getting-started.md  index.md  sharing.md
docs/development/: app.md  audio_caching.md  browse_mixtapes.md  common.md  configuration.md  deployment.md  docker-dev.md  docker.md  editor.md  intro.md  mixtape_manager.md  musiclib.md  playback.md  project_modules.md  pwa.md  qr_generation.md  roadmap.md  utilities.md  version_utility.md
docs/project/: about.md  (+4 more)
project/: about.html  changelog.html  contributing.html  index.html  roadmap.html
search/: search_index.js  search_index.json
src/: app.py  auth.py  collections.yml  config.py  corrupt_db.py  manifest.json  read_library.py  search_text.py  service-worker.js  test-package.py
stylesheets/: extra.css
user/: collection-management.html  docker-deployment.html  docker.html  editor.html  getting-started.html  sharing.html
(+356 files in other folders)
