[project]
name = "mixtape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mutagen>=1.47.0",
    "pillow>=12.0.0",
    "python-json-logger>=4.0.0",
    "tinytag>=2.1.2",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
