[project]
name = "mixtape-society"
version = "0.1.0"
description = "Creating and sharing mixtapes"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Mark Zwart", email = "mark.zwart@pobox.com"}
]
dependencies = [
    "cairosvg>=2.8.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-limiter>=4.1.1",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "qrcode>=8.2",
    "tinytag>=2.1.2",
    "watchdog>=6.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]  # Include alles in src/ (je app.py, routes/, etc.)
sources = { "src" = "src" }  # Map src/ naar zichzelf in de wheel

[dependency-groups]
dev = [
    # Documentation tooling
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-panzoom-plugin>=0.4.2",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-mermaid2-plugin>=1.2.3",
]

[project.scripts]
mixtape = "src.app:serve"
